--- a/haxball_site/templates/core/include/comments.html
+++ b/haxball_site/templates/core/include/comments.html
@@ -9,7 +9,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        <div class="card" style="border-radius: 20px 20px 0px 0px">
+        <div class="card mb-5" style="border-radius: 20px 20px 0px 0px">
             {% if post.commentable %}
                 <div class="card-body card-body-comment">
                     {% if post.comments.count > 0 %}
