--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -19,7 +19,7 @@
 
 <nav class="navbar navbar-expand-xl bg-dark navbar-dark d-flex bd-highlight mb-0 sticky-top">
     <!-- Brand -->
-    <a class="navbar-brand" href="{% url 'core:home' %}">Главная</a>
+    <a class="navbar-brand font-weight-bold" href="{% url 'core:home' %}">Главная</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -28,7 +28,7 @@
         <!-- Links -->
         <ul class="navbar-nav mr-auto p-2 bd-highlight">
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                <a class="nav-link dropdown-toggle font-weight-bold" href="#" id="navbardrop" data-toggle="dropdown">
                     Чемпионат
                 </a>
                 <div class="dropdown-menu">
@@ -43,15 +43,15 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'core:tournaments' %}">Турниры</a>
+                <a class="nav-link font-weight-bold" href="{% url 'core:tournaments' %}">Турниры</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'core:fastcups' %}">Фасткапы</a>
+                <a class="nav-link font-weight-bold" href="{% url 'core:fastcups' %}">Фасткапы</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'core:lives' %}">Трансляции</a>
+                <a class="nav-link font-weight-bold" href="{% url 'core:lives' %}">Трансляции</a>
             </li>
-            <li class="nav-item dropdown">
+            <li class="nav-item font-weight-bold dropdown">
                 <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
                     Архив
                 </a>
@@ -66,15 +66,15 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'core:forum' %}">Форум</a>
+                <a class="nav-link font-weight-bold" href="{% url 'core:forum' %}">Форум</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'core:admins' %}">Администрация</a>
+                <a class="nav-link font-weight-bold" href="{% url 'core:admins' %}">Администрация</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="http://www.cis-haxball.com/post/16/rules">Правила</a>
+                <a class="nav-link font-weight-bold" href="http://www.cis-haxball.com/post/16/rules">Правила</a>
             </li>
 
 
