--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -28,7 +28,7 @@
         <!-- Links -->
         <ul class="navbar-nav mr-auto p-2 bd-highlight">
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle font-weight-bold" href="#" id="navbardrop" data-toggle="dropdown">
+                <a class="nav-link dropdown-toggle font-weight-bold mx-1" href="#" id="navbardrop" data-toggle="dropdown">
                     Чемпионат
                 </a>
                 <div class="dropdown-menu">
@@ -43,15 +43,15 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link font-weight-bold" href="{% url 'core:tournaments' %}">Турниры</a>
+                <a class="nav-link font-weight-bold mx-1" href="{% url 'core:tournaments' %}">Турниры</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link font-weight-bold" href="{% url 'core:fastcups' %}">Фасткапы</a>
+                <a class="nav-link font-weight-bold mx-1" href="{% url 'core:fastcups' %}">Фасткапы</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link font-weight-bold" href="{% url 'core:lives' %}">Трансляции</a>
+                <a class="nav-link font-weight-bold mx-1" href="{% url 'core:lives' %}">Трансляции</a>
             </li>
-            <li class="nav-item font-weight-bold dropdown">
+            <li class="nav-item font-weight-bold dropdown mx-1">
                 <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
                     Архив
                 </a>
@@ -66,15 +66,15 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link font-weight-bold" href="{% url 'core:forum' %}">Форум</a>
+                <a class="nav-link font-weight-bold mx-1" href="{% url 'core:forum' %}">Форум</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link font-weight-bold" href="{% url 'core:admins' %}">Администрация</a>
+                <a class="nav-link font-weight-bold mx-1" href="{% url 'core:admins' %}">Администрация</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link font-weight-bold" href="http://www.cis-haxball.com/post/16/rules">Правила</a>
+                <a class="nav-link font-weight-bold mx-1" href="http://www.cis-haxball.com/post/16/rules">Правила</a>
             </li>
 
 
