--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -17,7 +17,7 @@
     </div>
 </nav>
 
-<nav class="navbar navbar-expand-xl bg-dark navbar-dark d-flex bd-highlight mb-0 sticky-top">
+<nav class="navbar navbar-expand-xl bg-dark navbar-dark d-flex bd-highlight mb-0 sticky-top p-1">
     <!-- Brand -->
     <a class="navbar-brand font-weight-bold" href="{% url 'core:home' %}">Главная</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -26,7 +26,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <!-- Links -->
-        <ul class="navbar-nav mr-auto p-2 bd-highlight">
+        <ul class="navbar-nav mr-auto bd-highlight">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle font-weight-bold mx-1" href="#" id="navbardrop" data-toggle="dropdown">
                     Чемпионат
