--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <nav class="navbar navbar-light navbar_color nav-fill"
-     style=background-image:url({% static "img/backgrounds/background_114.jpg" %})>
+     style="background-image:url({% static "img/backgrounds/background_niqo.png" %}); height: 100px">
 
     <form class="form-inline">
         <input class="form-control mr-sm-2" type="search" placeholder="Поиск" aria-label="Search">
@@ -9,7 +9,7 @@
     </form>
 
     <a class="navbar-brand nav-item" href="{% url 'core:home' %}">
-        <div class="page-name"><h3>CIS-HAXBALL.COM</h3></div>
+        <div class="page-name"><h3></h3></div>
     </a>
     <div class="mr-100">
         <iframe src="https://money.yandex.ru/quickpay/button-widget?targets=%D0%9F%D0%BE%D0%B6%D0%B5%D1%80%D1%82%D0%B2%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5&default-sum=200&button-text=14&yamoney-payment-type=on&button-size=m&button-color=black&successURL=&quickpay=small&account=410011043451485&"
@@ -19,7 +19,7 @@
 
 <nav class="navbar navbar-expand-xl bg-dark navbar-dark d-flex bd-highlight mb-0 sticky-top p-1">
     <!-- Brand -->
-    <a class="navbar-brand font-weight-bold" href="{% url 'core:home' %}">Главная</a>
+    <a class="navbar-brand font-weight-bold ml-2" href="{% url 'core:home' %}">Главная</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -86,15 +86,15 @@
         {% if user.is_authenticated %}
             <a class="p-2" href="{{ user.user_profile.get_absolute_url }}">{{ user.username }}</a>
         {% else %}
-            <a role="button" class="btn btn-success mr-1" href="{% url 'account_signup' %}">Регистрация</a>
+            <a role="button" class="btn btn-success mr-2" href="{% url 'account_signup' %}">Регистрация</a>
         {% endif %}
 
         {% if user.is_authenticated %}
-            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#logoutModal">
+            <button type="button" class="btn btn-danger mr-2" data-toggle="modal" data-target="#logoutModal">
                 Выход
             </button>
         {% else %}
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">
+            <button type="button" class="btn btn-primary mr-2" data-toggle="modal" data-target="#loginModal">
                 Вход
             </button>
         {% endif %}
