--- a/haxball_site/templates/core/post/detail.html
+++ b/haxball_site/templates/core/post/detail.html
@@ -95,7 +95,7 @@
 {% endblock %}
 {% block post %}
 
-    <div class="card my-4" style="border-radius: 25px">
+    <div class="card mb-4 mt-2" style="border-radius: 25px">
         <div class="card-header" style="border-radius: 25px">
             <h4 class="card-title mb-1">{{ post.title }}
                 {% if post.author == user %}
