--- a/haxball_site/templates/core/include/comments.html
+++ b/haxball_site/templates/core/include/comments.html
@@ -66,7 +66,7 @@
                                         {% endif %}
                                 </span>
                                 </div>
-                                <p class="m-b-5 m-t-10" style="width: auto">
+                                <p class="m-b-5 m-t-10">
                                     {{ comment.body|safe|linebreaks }}
                                 </p>
 
