--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{% static "bootstrap/css/bootstrap.min.css" %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+    <link rel="shortcut icon" href="{% static "img/ico/logo2.png" %}" type="image/x-icon">
     {% block styles %} {% endblock %}
 
     <script type="text/javascript" src="{% static "jquery/jquery-3.5.1.min.js" %}"></script>
