--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     <link rel="shortcut icon" href="{% static "img/ico/logo2.png" %}" type="image/x-icon">
     {% block styles %} {% endblock %}
-
+    <script data-ad-client="ca-pub-1603400488742656" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script type="text/javascript" src="{% static "jquery/jquery-3.5.1.min.js" %}"></script>
     <script type="text/javascript" src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
 
