--- a/haxball_site/templates/core/include/sidebar_for_top_comments.html
+++ b/haxball_site/templates/core/include/sidebar_for_top_comments.html
@@ -34,7 +34,7 @@
             </div>
             <div class="btn-group-vertical">
                  {% for comment in top_comments_day %}
-                    <a type="button" href="{{ comment.post.get_absolute_url }}" class="btn btn-secondary btn-block text-right px-1"
+                    <a type="button" href="{{ comment.post.get_absolute_url }}#r{{ comment.id }}" class="btn btn-secondary btn-block text-right px-1"
                        data-toggle="tooltip" data-placement="right" title="от {{ comment.author }}">
                         <div class="d-flex justify-content-between">
                             <div>
@@ -57,7 +57,7 @@
             </div>
             <div class="btn-group-vertical">
                  {% for comment in top_comments_month %}
-                    <a type="button" href="{{ comment.post.get_absolute_url }}" class="btn btn-secondary btn-block text-right px-1"
+                    <a type="button" href="{{ comment.post.get_absolute_url }}#r{{ comment.id }}" class="btn btn-secondary btn-block text-right px-1"
                        data-toggle="tooltip" data-placement="right" title="от {{ comment.author }}">
                         <div class="d-flex justify-content-between">
                             <div>
@@ -79,7 +79,7 @@
             </div>
             <div class="btn-group-vertical">
                  {% for comment in top_comments_year %}
-                    <a type="button" href="{{ comment.post.get_absolute_url }}" class="btn btn-secondary btn-block text-right px-1"
+                    <a type="button" href="{{ comment.post.get_absolute_url }}#r{{ comment.id }}" class="btn btn-secondary btn-block text-right px-1"
                        data-toggle="tooltip" data-placement="right" title="от {{ comment.author }}">
                         <div class="d-flex justify-content-between">
                             <div>
